# Special_Judg_Code

./: .gitignore  CMakeLists.txt  README.md
doc/example/ex1/solution/: 1.in  main.cpp
doc/example/ex1/src/: spj.cpp
solution/: 1.in  main.cpp
solution/other/: 1.cpp  2.cpp
src/: blank_target.cpp  pattern.cpp  spj.cpp
